--- a/style.css
+++ b/style.css
@@ -9,3 +9,139 @@
     box-sizing: border-box;
     font-family: 'roboto', sans-serif;
 }
+
+.container {
+    display: grid;
+    grid-template: 2fr 8fr / 1fr 3fr;
+}
+
+header {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    display: grid;
+    grid-template: 1fr 1fr / 2fr 1fr;
+    padding: 15px;
+}
+
+.search {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+.searchbar {
+    grid-column: 1 / 2;
+    display: grid;
+    grid-template-columns: 1fr 10fr;
+    align-items: center;
+}
+
+.searchbar input {
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 15px;
+    background-color: #e2e8f0;
+    border: none;
+    font-size: 18px;
+}
+
+.searchbar input:focus {
+    outline: none;
+}
+
+.user-panel {
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr;
+    align-items: center;
+}
+
+.notifications {
+    grid-column: 1 / 2;
+    justify-self: end;
+}
+
+.user-panel-image {
+    justify-self: center;
+}
+
+.user-panel-image img {
+    width: 50px;
+    border-radius: 50%;
+    grid-column: 2 / 3;
+}
+
+.user-panel-name {
+    grid-column: 3 / 4;
+    text-align: start;
+    font-weight: bold;
+}
+
+.nav {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.welcome {
+    grid-column: 1 / 2;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+}
+
+.user-nav-image {
+    justify-self: start;
+}
+
+.user-nav-image img {
+    width: 70px;
+    border-radius: 50%;
+}
+
+.welcome:nth-child(1) p:first-child{
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.welcome:nth-child(1) p:last-child{
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.nav-options {
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+}
+
+.nav-options button {
+    width: fit-content;
+    height: fit-content;
+    background-color: #1992d4;
+    color: white;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius: 30px;
+    border: none;
+}
+
+.nav-options button:hover {
+    cursor: pointer;
+}
+
+.sidebar {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+.content {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
