--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ header {
     outline: none;
 }
 
+.magnify {
+    justify-self: center;
+}
+
 .user-panel {
     grid-column: 2 / 3;
     display: grid;
@@ -79,7 +83,7 @@ header {
     font-weight: bold;
 }
 
-.nav {
+.interest-links {
     grid-row: 2 / 3;
     grid-column: 1 / 3;
     display: grid;
@@ -123,22 +127,84 @@ header {
     width: fit-content;
     height: fit-content;
     background-color: #1992d4;
-    color: white;
+    color: #fff;
     padding-left: 25px;
     padding-right: 25px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-radius: 30px;
     border: none;
 }
 
 .nav-options button:hover {
     cursor: pointer;
+    background-color: #197aad;
 }
 
 .sidebar {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+    background-color: #1992d4;
+    padding: 30px;
+}
+
+.sidebar > * {
+    color: #fff;
+}
+
+.dashboard {
+    grid-row: 1 / 2;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.dashboard svg {
+    grid-column: 1 / 2;
+    fill: #fff;
+    height: 50px;
+    width: 50px;
+}
+
+.dashboard p {
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.menu {
+    grid-row: 2 / 3;
+}
+
+.menu ul {
+    list-style: none;
+    margin-bottom: 60px;
+}
+
+.menu ul li {
+    font-size: 20px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.menu ul li:hover {
+    cursor: pointer;
+    background-color: #197aad;
+}
+
+.menu ul li svg {
+    height: 25px;
+    width: 25px;
+    fill: #fff;
+}
+
+.menu ul li p {
+    font-weight: bold;
+    font-size: 16px;
+    letter-spacing: 1px;
 }
 
 .content {
